show percentage of shots

--- a/kobe-EDA.ipynb
+++ b/kobe-EDA.ipynb
@@ -918,253 +918,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>action_type</th>\n",
-       "      <th>combined_shot_type</th>\n",
-       "      <th>game_event_id</th>\n",
-       "      <th>game_id</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>loc_x</th>\n",
-       "      <th>loc_y</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>minutes_remaining</th>\n",
-       "      <th>period</th>\n",
-       "      <th>playoffs</th>\n",
-       "      <th>season</th>\n",
-       "      <th>seconds_remaining</th>\n",
-       "      <th>shot_distance</th>\n",
-       "      <th>shot_made_flag</th>\n",
-       "      <th>shot_type</th>\n",
-       "      <th>shot_zone_area</th>\n",
-       "      <th>shot_zone_basic</th>\n",
-       "      <th>shot_zone_range</th>\n",
-       "      <th>team_id</th>\n",
-       "      <th>team_name</th>\n",
-       "      <th>game_date</th>\n",
-       "      <th>matchup</th>\n",
-       "      <th>opponent</th>\n",
-       "      <th>shot_id</th>\n",
-       "      <th>action_type_NUM</th>\n",
-       "      <th>combined_shot_type_NUM</th>\n",
-       "      <th>shot_type_NUM</th>\n",
-       "      <th>shot_zone_area_NUM</th>\n",
-       "      <th>shot_zone_basic_NUM</th>\n",
-       "      <th>shot_zone_range_NUM</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Jump Shot</td>\n",
-       "      <td>Jump Shot</td>\n",
-       "      <td>12</td>\n",
-       "      <td>20000012</td>\n",
-       "      <td>34.0443</td>\n",
-       "      <td>-157</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-118.4268</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2000-01</td>\n",
-       "      <td>22</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2PT Field Goal</td>\n",
-       "      <td>Left Side(L)</td>\n",
-       "      <td>Mid-Range</td>\n",
-       "      <td>8-16 ft.</td>\n",
-       "      <td>1610612747</td>\n",
-       "      <td>Los Angeles Lakers</td>\n",
-       "      <td>2000-10-31</td>\n",
-       "      <td>LAL @ POR</td>\n",
-       "      <td>POR</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Jump</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Left Side(L)</td>\n",
-       "      <td>Mid-Range</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Jump Shot</td>\n",
-       "      <td>Jump Shot</td>\n",
-       "      <td>35</td>\n",
-       "      <td>20000012</td>\n",
-       "      <td>33.9093</td>\n",
-       "      <td>-101</td>\n",
-       "      <td>135</td>\n",
-       "      <td>-118.3708</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2000-01</td>\n",
-       "      <td>45</td>\n",
-       "      <td>16</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2PT Field Goal</td>\n",
-       "      <td>Left Side Center(LC)</td>\n",
-       "      <td>Mid-Range</td>\n",
-       "      <td>16-24 ft.</td>\n",
-       "      <td>1610612747</td>\n",
-       "      <td>Los Angeles Lakers</td>\n",
-       "      <td>2000-10-31</td>\n",
-       "      <td>LAL @ POR</td>\n",
-       "      <td>POR</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Jump</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Left Side Center(LC)</td>\n",
-       "      <td>Mid-Range</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jump Shot</td>\n",
-       "      <td>Jump Shot</td>\n",
-       "      <td>43</td>\n",
-       "      <td>20000012</td>\n",
-       "      <td>33.8693</td>\n",
-       "      <td>138</td>\n",
-       "      <td>175</td>\n",
-       "      <td>-118.1318</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2000-01</td>\n",
-       "      <td>52</td>\n",
-       "      <td>22</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2PT Field Goal</td>\n",
-       "      <td>Right Side Center(RC)</td>\n",
-       "      <td>Mid-Range</td>\n",
-       "      <td>16-24 ft.</td>\n",
-       "      <td>1610612747</td>\n",
-       "      <td>Los Angeles Lakers</td>\n",
-       "      <td>2000-10-31</td>\n",
-       "      <td>LAL @ POR</td>\n",
-       "      <td>POR</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Jump</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Right Side Center(RC)</td>\n",
-       "      <td>Mid-Range</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Driving Dunk Shot</td>\n",
-       "      <td>Dunk</td>\n",
-       "      <td>155</td>\n",
-       "      <td>20000012</td>\n",
-       "      <td>34.0443</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-118.2698</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2000-01</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2PT Field Goal</td>\n",
-       "      <td>Center(C)</td>\n",
-       "      <td>Restricted Area</td>\n",
-       "      <td>Less Than 8 ft.</td>\n",
-       "      <td>1610612747</td>\n",
-       "      <td>Los Angeles Lakers</td>\n",
-       "      <td>2000-10-31</td>\n",
-       "      <td>LAL @ POR</td>\n",
-       "      <td>POR</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Dunk</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Center(C)</td>\n",
-       "      <td>Restricted Area</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Jump Shot</td>\n",
-       "      <td>Jump Shot</td>\n",
-       "      <td>244</td>\n",
-       "      <td>20000012</td>\n",
-       "      <td>34.0553</td>\n",
-       "      <td>-145</td>\n",
-       "      <td>-11</td>\n",
-       "      <td>-118.4148</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2000-01</td>\n",
-       "      <td>32</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2PT Field Goal</td>\n",
-       "      <td>Left Side(L)</td>\n",
-       "      <td>Mid-Range</td>\n",
-       "      <td>8-16 ft.</td>\n",
-       "      <td>1610612747</td>\n",
-       "      <td>Los Angeles Lakers</td>\n",
-       "      <td>2000-10-31</td>\n",
-       "      <td>LAL @ POR</td>\n",
-       "      <td>POR</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Jump</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Left Side(L)</td>\n",
-       "      <td>Mid-Range</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "         action_type combined_shot_type  game_event_id   game_id      lat  loc_x  loc_y       lon  minutes_remaining  period  playoffs   season  seconds_remaining  shot_distance  shot_made_flag       shot_type         shot_zone_area  shot_zone_basic  shot_zone_range     team_id           team_name   game_date    matchup opponent  shot_id action_type_NUM  combined_shot_type_NUM  shot_type_NUM     shot_zone_area_NUM shot_zone_basic_NUM  shot_zone_range_NUM\n",
-       "0          Jump Shot          Jump Shot             12  20000012  34.0443   -157      0 -118.4268                 10       1         0  2000-01                 22             15             0.0  2PT Field Goal           Left Side(L)        Mid-Range         8-16 ft.  1610612747  Los Angeles Lakers  2000-10-31  LAL @ POR      POR        2            Jump                       5              2           Left Side(L)           Mid-Range                   12\n",
-       "1          Jump Shot          Jump Shot             35  20000012  33.9093   -101    135 -118.3708                  7       1         0  2000-01                 45             16             1.0  2PT Field Goal   Left Side Center(LC)        Mid-Range        16-24 ft.  1610612747  Los Angeles Lakers  2000-10-31  LAL @ POR      POR        3            Jump                       5              2   Left Side Center(LC)           Mid-Range                   20\n",
-       "2          Jump Shot          Jump Shot             43  20000012  33.8693    138    175 -118.1318                  6       1         0  2000-01                 52             22             0.0  2PT Field Goal  Right Side Center(RC)        Mid-Range        16-24 ft.  1610612747  Los Angeles Lakers  2000-10-31  LAL @ POR      POR        4            Jump                       5              2  Right Side Center(RC)           Mid-Range                   20\n",
-       "3  Driving Dunk Shot               Dunk            155  20000012  34.0443      0      0 -118.2698                  6       2         0  2000-01                 19              0             1.0  2PT Field Goal              Center(C)  Restricted Area  Less Than 8 ft.  1610612747  Los Angeles Lakers  2000-10-31  LAL @ POR      POR        5            Dunk                       1              2              Center(C)     Restricted Area                    8\n",
-       "4          Jump Shot          Jump Shot            244  20000012  34.0553   -145    -11 -118.4148                  9       3         0  2000-01                 32             14             0.0  2PT Field Goal           Left Side(L)        Mid-Range         8-16 ft.  1610612747  Los Angeles Lakers  2000-10-31  LAL @ POR      POR        6            Jump                       5              2           Left Side(L)           Mid-Range                   12"
+       "action_type                      shot_made_flag\n",
+       "Alley Oop Dunk Shot              1.0               0.947368\n",
+       "                                 0.0               0.052632\n",
+       "Alley Oop Layup shot             1.0               0.716418\n",
+       "                                 0.0               0.283582\n",
+       "Cutting Layup Shot               1.0               0.666667\n",
+       "                                 0.0               0.333333\n",
+       "Driving Bank shot                1.0               0.666667\n",
+       "                                 0.0               0.333333\n",
+       "Driving Dunk Shot                1.0               0.976654\n",
+       "                                 0.0               0.023346\n",
+       "Driving Finger Roll Layup Shot   1.0               0.881356\n",
+       "                                 0.0               0.118644\n",
+       "Driving Finger Roll Shot         1.0               0.852941\n",
+       "                                 0.0               0.147059\n",
+       "Driving Floating Bank Jump Shot  1.0               1.000000\n",
+       "Driving Floating Jump Shot       0.0               0.666667\n",
+       "                                 1.0               0.333333\n",
+       "Driving Hook Shot                1.0               0.615385\n",
+       "                                 0.0               0.384615\n",
+       "Driving Jump shot                0.0               0.565217\n",
+       "                                 1.0               0.434783\n",
+       "Driving Layup Shot               1.0               0.741400\n",
+       "                                 0.0               0.258600\n",
+       "Driving Reverse Layup Shot       1.0               0.746988\n",
+       "                                 0.0               0.253012\n",
+       "Driving Slam Dunk Shot           1.0               0.976744\n",
+       "                                 0.0               0.023256\n",
+       "Dunk Shot                        1.0               0.778802\n",
+       "                                 0.0               0.221198\n",
+       "Fadeaway Bank shot               1.0               0.888889\n",
+       "                                 0.0               0.111111\n",
+       "Fadeaway Jump Shot               1.0               0.574541\n",
+       "                                 0.0               0.425459\n",
+       "Finger Roll Layup Shot           1.0               0.821429\n",
+       "                                 0.0               0.178571\n",
+       "Finger Roll Shot                 0.0               0.538462\n",
+       "                                 1.0               0.461538\n",
+       "Floating Jump shot               1.0               0.720430\n",
+       "                                 0.0               0.279570\n",
+       "Follow Up Dunk Shot              1.0               0.900000\n",
+       "                                 0.0               0.100000\n",
+       "Hook Bank Shot                   1.0               1.000000\n",
+       "Hook Shot                        0.0               0.630137\n",
+       "                                 1.0               0.369863\n",
+       "Jump Bank Shot                   1.0               0.775087\n",
+       "                                 0.0               0.224913\n",
+       "Jump Hook Shot                   1.0               0.736842\n",
+       "                                 0.0               0.263158\n",
+       "Jump Shot                        0.0               0.673087\n",
+       "                                 1.0               0.326913\n",
+       "Layup Shot                       0.0               0.614670\n",
+       "                                 1.0               0.385330\n",
+       "Pullup Bank shot                 1.0               0.545455\n",
+       "                                 0.0               0.454545\n",
+       "Pullup Jump shot                 1.0               0.723881\n",
+       "                                 0.0               0.276119\n",
+       "Putback Dunk Shot                1.0               0.666667\n",
+       "                                 0.0               0.333333\n",
+       "Putback Layup Shot               1.0               0.666667\n",
+       "                                 0.0               0.333333\n",
+       "Putback Slam Dunk Shot           0.0               0.500000\n",
+       "                                 1.0               0.500000\n",
+       "Reverse Dunk Shot                1.0               0.918033\n",
+       "                                 0.0               0.081967\n",
+       "Reverse Layup Shot               1.0               0.636637\n",
+       "                                 0.0               0.363363\n",
+       "Reverse Slam Dunk Shot           1.0               1.000000\n",
+       "Running Bank shot                1.0               0.837209\n",
+       "                                 0.0               0.162791\n",
+       "Running Dunk Shot                1.0               0.888889\n",
+       "                                 0.0               0.111111\n",
+       "Running Finger Roll Layup Shot   1.0               0.600000\n",
+       "                                 0.0               0.400000\n",
+       "Running Finger Roll Shot         0.0               0.750000\n",
+       "                                 1.0               0.250000\n",
+       "Running Hook Shot                1.0               0.878788\n",
+       "                                 0.0               0.121212\n",
+       "Running Jump Shot                1.0               0.747112\n",
+       "                                 0.0               0.252888\n",
+       "Running Layup Shot               1.0               0.705882\n",
+       "                                 0.0               0.294118\n",
+       "Running Pull-Up Jump Shot        1.0               0.666667\n",
+       "                                 0.0               0.333333\n",
+       "Running Reverse Layup Shot       1.0               0.571429\n",
+       "                                 0.0               0.428571\n",
+       "Running Slam Dunk Shot           1.0               1.000000\n",
+       "Running Tip Shot                 0.0               1.000000\n",
+       "Slam Dunk Shot                   1.0               0.982036\n",
+       "                                 0.0               0.017964\n",
+       "Step Back Jump shot              1.0               0.632075\n",
+       "                                 0.0               0.367925\n",
+       "Tip Layup Shot                   0.0               0.500000\n",
+       "                                 1.0               0.500000\n",
+       "Tip Shot                         0.0               0.649007\n",
+       "                                 1.0               0.350993\n",
+       "Turnaround Bank shot             1.0               0.793103\n",
+       "                                 0.0               0.206897\n",
+       "Turnaround Fadeaway shot         1.0               0.584699\n",
+       "                                 0.0               0.415301\n",
+       "Turnaround Finger Roll Shot      1.0               1.000000\n",
+       "Turnaround Hook Shot             0.0               0.500000\n",
+       "                                 1.0               0.500000\n",
+       "Turnaround Jump Shot             1.0               0.598204\n",
+       "                                 0.0               0.401796\n",
+       "Name: shot_made_flag, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "train.groupby('action_type')['shot_made_flag'].value_counts(normalize=True)"
+   ]
   },
   {
    "cell_type": "code",
