add baseline score

--- a/kobe-EDA.ipynb
+++ b/kobe-EDA.ipynb
@@ -841,6 +841,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Baseline model\n",
+    "\n",
+    "---\n",
+    "The best score to beat is about 55%.\n",
+    "\n",
+    "*Sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0    0.553839\n",
+       "1.0    0.446161\n",
+       "Name: shot_made_flag, dtype: float64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train['shot_made_flag'].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Best Model\n",
     "\n",
     "---\n",
