pickle ada feature importance

--- a/for-kobe.ipynb
+++ b/for-kobe.ipynb
@@ -5520,6 +5520,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(best_features_ada, open('assets/ada_featureimportance.pkl', 'wb+'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
