show feature importance of ADA model

--- a/kobe-EDA.ipynb
+++ b/kobe-EDA.ipynb
@@ -846,7 +846,7 @@
     "---\n",
     "The best score to beat is about 55%.\n",
     "\n",
-    "*Sp"
+    "*Spoiler Alert: I kind of almost break even with this score*"
    ]
   },
   {
@@ -914,6 +914,128 @@
    "source": [
     "# the pickled model\n",
     "ada = pickle.load(open('assets/ada_model.pkl','rb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Important Features\n",
+    "\n",
+    "---\n",
+    "The location of where Kobe took his shot was the one of the most important features in determining whether or not he would make a shot. It makes sense considering his jumper was his most common type of shot taken so he must have worked on getting a \"sweet spot\". \n",
+    "\n",
+    "I noticed that playing the New Jersey Nets, the Golden State Warriors, and the Indiana Pacers also made a difference in whether a shot would go in. I know that when Kobe was playing he would have his best games against these teams compared to any other team he plays against."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>features</th>\n",
+       "      <th>feature_importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>loc_y</td>\n",
+       "      <td>0.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>loc_x</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>action_type_Jump Shot</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>action_type_Running Jump Shot</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>period</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>matchup_LAL @ GSW</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>matchup_LAL vs. IND</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>opponent_NJN</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>action_type_Slam Dunk Shot</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>action_type_Step Back Jump shot</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            features feature_importance\n",
+       "1                              loc_y               0.19\n",
+       "0                              loc_x               0.15\n",
+       "26             action_type_Jump Shot               0.02\n",
+       "39     action_type_Running Jump Shot               0.02\n",
+       "2                             period               0.02\n",
+       "84                 matchup_LAL @ GSW               0.01\n",
+       "123              matchup_LAL vs. IND               0.01\n",
+       "179                     opponent_NJN               0.01\n",
+       "44        action_type_Slam Dunk Shot               0.01\n",
+       "45   action_type_Step Back Jump shot               0.01"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pickled feature importances\n",
+    "feature_importance = pickle.load(open('assets/ada_featureimportance.pkl','rb'))\n",
+    "feature_importance.sort_values('feature_importance',ascending=False).head(10)"
    ]
   },
   {
@@ -1145,6 +1267,13 @@
     "plt.figure(figsize=(12,15))\n",
     "train.groupby('opponent')['shot_made_flag'].value_counts(normalize=True).sort_values().plot(kind='barh')\n",
     "plt.title('Who is Kobe Taking Down?',size=15);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Confusion Matrix"
    ]
   },
   {
