--- a/kobe-EDA.ipynb
+++ b/kobe-EDA.ipynb
@@ -925,7 +925,7 @@
     "---\n",
     "The location of where Kobe took his shot was the one of the most important features in determining whether or not he would make a shot. It makes sense considering his jumper was his most common type of shot taken so he must have worked on getting a \"sweet spot\". \n",
     "\n",
-    "I noticed that playing the New Jersey Nets, the Golden State Warriors, and the Indiana Pacers also made a difference in whether a shot would go in. I know that when Kobe was playing he would have his best games against these teams compared to any other team he plays against."
+    "I noticed that playing the New Jersey Nets, the Golden State Warriors, and the Indiana Pacers also made a difference in whether a shot would go in. I know that when Kobe was playing he would have his best games or his worst against these teams compared to any other team he plays against."
    ]
   },
   {
@@ -1222,6 +1222,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Any number after Period 4 is considered Overtime. This is basically quarters after regulation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -1243,6 +1250,13 @@
     "plt.figure(figsize=(12,9))\n",
     "train.groupby('period')['shot_made_flag'].value_counts(normalize=True).plot(kind='barh')\n",
     "plt.title('Which was Kobe\\'s favorite quarter?',size=15);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Brooklyn gave Kobe some problems while he was dominating against the Knicks. Then again who wouldn't do well against the Knicks."
    ]
   },
   {
