add playoff kobe graph

--- a/kobe-EDA.ipynb
+++ b/kobe-EDA.ipynb
@@ -1284,18 +1284,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Confusion Matrix"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(12,15))\n",
+    "train.groupby('opponent')['shot_made_flag'].value_counts(normalize=True).sort_values().plot(kind='barh')\n",
+    "plt.title('Who is Kobe Taking Down?',size=15)"
+   ]
   }
  ],
  "metadata": {
