--- a/kobe-EDA.ipynb
+++ b/kobe-EDA.ipynb
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1255,7 @@
     "train.groupby('period')['shot_made_flag'].value_counts(normalize=True).plot(kind='barh')\n",
     "plt.title('Which was Kobe\\'s favorite quarter?',size=15);\n",
     "\n",
-    "plt.savefig('imgs/4.png')"
+    "plt.savefig('imgs/4thqtrcounts.png')"
    ]
   },
   {
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1286,12 +1286,14 @@
    "source": [
     "plt.figure(figsize=(12,15))\n",
     "train.groupby('opponent')['shot_made_flag'].value_counts(normalize=True).sort_values().plot(kind='barh')\n",
-    "plt.title('Who is Kobe Taking Down?',size=15);"
+    "plt.title('Who is Kobe Taking Down?',size=15);\n",
+    "\n",
+    "plt.savefig('imgs/whoaretheknickslol.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1312,9 @@
    "source": [
     "plt.figure(figsize=(12,6))\n",
     "train.groupby('playoffs')['shot_made_flag'].value_counts(normalize=True).sort_values().plot(kind='barh')\n",
-    "plt.title('Kobe wants the ball during the playoffs',size=15);"
+    "plt.title('Kobe wants the ball during the playoffs',size=15);\n",
+    "\n",
+    "plt.savefig('imgs/playoffkobe.png')"
    ]
   },
   {
